2010-03-25  Ojan Vafai  <ojan@chromium.org>

Reviewed by Darin Adler.

        shift+home/end and cmd+shift+left/right don't extend the selection correctly
        https://bugs.webkit.org/show_bug.cgi?id=36539

        * editing/selection/extend-after-mouse-selection.html:
        * editing/selection/extend-selection-expected.txt:
        Extending forward by lineboundary selects the whole line. Now extending backwards
        by lineboundary after the whole line is selected is a noop instead of collapsed
        the selection to the start.
        * editing/selection/move-begin-end.html:
        Just cleaned up this test.
        * platform/mac/editing/selection/extend-after-mouse-selection-expected.txt:
2010-03-25  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Darin Adler.

        shift+home/end and cmd+shift+left/right don't extend the selection correctly
        https://bugs.webkit.org/show_bug.cgi?id=36539

        * WebCore.base.exp:
        * editing/SelectionController.cpp:
        (WebCore::SelectionController::modify):
        * editing/SelectionController.h:

Canonical link: https://commits.webkit.org/47933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56639 268f45cc-cd09-0410-ab3c-d52691b4dbfc